--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "legalmind",
   "version": "1.0.0",
   "description": "Análisis de documentos legales con Node.js y Google Gemini",
-  "main": "src/server.js",
+  "main": "functions/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node functions/server.js",
+    "dev": "nodemon functions/server.js",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
